--- a/html/primavera-verano.html
+++ b/html/primavera-verano.html
@@ -165,8 +165,8 @@
               </figure>
             </div>
             <div id="shorts2">
-              <figure>
-                <img src="/imagenes/short4.jfif" alt="pantalon azul">
+              <figure class="info">
+                <img src="/imagenes/faldanegra.jfif" alt="pantalon azul">
                 <figcaption>
                   <p>producto</p> 
                   <p>(104364)</p>
@@ -175,8 +175,8 @@
                   <p>mesclilla</p>
                 </figcaption>
               </figure>
-              <figure>
-                <img src="/imagenes/short3.jpg" alt="pantalon azul">
+              <figure class="info">
+                <img src="/imagenes/faldanegra2.jpg" alt="pantalon azul">
                 <figcaption>
                   <p>producto</p> 
                   <p>(104364)</p>
@@ -185,8 +185,8 @@
                   <p>mesclilla</p>
                 </figcaption>
               </figure>
-              <figure>
-                <img src="/imagenes/short1.jpg" alt="pantalon azul">
+              <figure class="info">
+                <img src="/imagenes/faldarosa.jfif" alt="pantalon azul">
                 <figcaption>
                   <p>producto</p> 
                   <p>(104364)</p>
@@ -195,7 +195,7 @@
                   <p>mesclilla</p>
                 </figcaption>
               </figure>
-              <figure>
+              <figure class="info">
                 <img src="/imagenes/short2.jpg" alt="pantalon azul">
                 <figcaption>
                   <p>producto</p> 
@@ -211,7 +211,7 @@
           <article>
             <div class="sections">Blusas</div>
             <div id="blusas">
-              <figure>
+              <figure class="info">
                 <img src="/imagenes/blusa.jpeg" alt="pantalon azul">
                 <figcaption>
                   <p>producto</p> 
@@ -221,7 +221,7 @@
                   <p>mesclilla</p>
                 </figcaption>
               </figure>
-              <figure>
+              <figure class="info">
                 <img src="/imagenes/blusa05-1629882674.jpg" alt="pantalon azul">
                 <figcaption>
                   <p>producto</p> 
@@ -231,7 +231,7 @@
                   <p>mesclilla</p>
                 </figcaption>
               </figure>
-              <figure>
+              <figure class="info">
                 <img src="/imagenes/blusa10.jfif" alt="pantalon azul">
                 <figcaption>
                   <p>producto</p> 
@@ -241,7 +241,7 @@
                   <p>mesclilla</p>
                 </figcaption>
               </figure>
-              <figure>
+              <figure class="info">
                 <img src="/imagenes/blusa2.jfif" alt="pantalon azul">
                 <figcaption>
                   <p>producto</p> 
@@ -250,7 +250,7 @@
                   <p>Azul claro </p>
                   <p>mesclilla</p>
                 </figcaption>
-              </figure>
+              </figure class="info">
             </div>
             <div id="blusas2">
               <figure>
@@ -262,7 +262,7 @@
                   <p>Azul claro </p>
                   <p>mesclilla</p>
                 </figcaption>
-              </figure>
+              </figure class="info">
               <figure>
                 <img src="/imagenes/blusa6.jfif" alt="pantalon azul">
                 <figcaption>
@@ -273,7 +273,7 @@
                   <p>mesclilla</p>
                 </figcaption>
               </figure>
-              <figure>
+              <figure class="info">
                 <img src="/imagenes/blusa4.jfif" alt="pantalon azul">
                 <figcaption>
                   <p>producto</p> 
@@ -283,7 +283,7 @@
                   <p>mesclilla</p>
                 </figcaption>
               </figure>
-              <figure>
+              <figure class="info">
                 <img src="/imagenes/blusa7.jfif" alt="pantalon azul">
                 <figcaption>
                   <p>producto</p> 
