--- a/html/productos.html
+++ b/html/productos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/primavera.css">
+    <link rel="stylesheet" href="/css/productos.css">
 </head>
 <body>
     <main>
@@ -29,7 +30,7 @@
             </div>
         <section>
             <article>
-                <div>
+                <div id="informacion">
                     <figure>
                         <img src="/imagenes/faldanegra.jfif" alt="pantalon azul">
                         <figcaption>
@@ -41,7 +42,7 @@
                         </figcaption>
                       </figure>
                 </div>
-                <div>
+                <div id="descripcion">
                     <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó </p>
                     <p>Envio rapido</p>
                 </div>
