--- a/inicio.html
+++ b/inicio.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blayeth</title>
     <link rel="stylesheet" href="Estilos.css/estilos.css">
-
 <script src="script.js"></script>
 <body>
+ 
   <div class="header">
     <div class="header1">
     <h1>Blayeth</h1>
@@ -28,11 +28,13 @@
         <input type="password" id="password" placeholder="Ingrese su contraseña" required>
       </div>
       <div class="button-container">
-        <button type="submit">Iniciar sesión</button>
+          <div class="register-link">
+          <a href="PaguinaPrincipal.html">Iniciar sesion</a>
+          </div>
       </div>
     </form>
     <div class="register-link">
-      ¿No tienes cuenta? <a href="#">Regístrate</a>
+      ¿No tienes cuenta? <a href="Registro.html">Regístrate</a>
     </div>
   </div>
 
