--- a/inicio.html
+++ b/inicio.html
@@ -16,6 +16,17 @@
 </div>
 </div>
 
+  <label for="nombrePredeterminado">Elige un nombre predeterminado:</label>
+  <select id="nombrePredeterminado" name="Primavera/verano">
+    <optgroup>
+    <option value="blusa">blusa</option>
+    <option value="falda">falda</option>
+    <option value="pantalon">pantalon</option>
+    <option value="sueter">sueter</option>
+  </optgroup>
+  </select>
+
+
   <div class="login-container">
     <h2>Iniciar sesión</h2>
     <form>
